# aff-v2

./: FINAL_TESTE_SABADO_CIFAR10_ff0.05_alpha0.3_AFF_V4.json  FINAL_TESTE_SABADO_CIFAR10_ff0.1_alpha1000_AFF_V4.json  FINAL_TESTE_SABADO_MNIST_ff0.05_alpha0.3_AFF_V4.json  FINAL_TESTE_SABADO_MNIST_ff0.05_alpha1000_AFF_V4.json  README.md  RESULT_SEED_1_CIFAR10_ff0.05_alpha0.3_AFF_V2_HET.json  RESULT_SEED_1_CIFAR10_ff0.05_alpha0.3_AFF_V2_ORIGINAL.json  RESULT_SEED_1_CIFAR10_ff0.05_alpha0.3_CONSTANT_CONSTANT.json  RESULT_SEED_1_CIFAR10_ff0.05_alpha0.3_CRITICAL_FL.json  RESULT_SEED_1_CIFAR10_ff0.05_alpha1000_AFF_V2_HET.json  RESULT_SEED_1_CIFAR10_ff0.05_alpha1000_AFF_V2_ORIGINAL.json  RESULT_SEED_1_CIFAR10_ff0.05_alpha1000_CONSTANT_CONSTANT.json  RESULT_SEED_1_CIFAR10_ff0.1_alpha0.3_AFF_V2_HET.json  RESULT_SEED_1_CIFAR10_ff0.1_alpha0.3_AFF_V2_ORIGINAL.json  RESULT_SEED_1_CIFAR10_ff0.1_alpha0.3_CONSTANT_CONSTANT.json  RESULT_SEED_1_CIFAR10_ff0.1_alpha0.3_CRITICAL_FL.json  RESULT_SEED_1_CIFAR10_ff0.1_alpha1000_AFF_V2_HET.json  RESULT_SEED_1_CIFAR10_ff0.1_alpha1000_AFF_V2_ORIGINAL.json  RESULT_SEED_1_CIFAR10_ff0.1_alpha1000_CONSTANT_CONSTANT.json  RESULT_SEED_1_CIFAR10_ff0.1_alpha1000_CRITICAL_FL.json  RESULT_SEED_1_MNIST_ff0.05_alpha0.3_AFF_V2_HET.json  RESULT_SEED_1_MNIST_ff0.05_alpha0.3_AFF_V2_ORIGINAL.json  RESULT_SEED_1_MNIST_ff0.05_alpha0.3_CONSTANT_CONSTANT.json  RESULT_SEED_1_MNIST_ff0.05_alpha0.3_CRITICAL_FL.json  RESULT_SEED_1_MNIST_ff0.05_alpha1000_AFF_V2_HET.json  RESULT_SEED_1_MNIST_ff0.05_alpha1000_AFF_V2_ORIGINAL.json  (+114 more)
aff_v2/: __init__.py  aff.py  aff_with_het.py  (+15 more)
(+122 files in other folders)
